--- a/index.html
+++ b/index.html
@@ -47,7 +47,26 @@
 			</ul>
 		</div>
 	</div>
-	
+	<div id="slash">
+    <h1>Color examples Below</h1>
+    </div>
+    <br>
+    <div id="header1">
+        <h2>Color of Header</h2>
+    </div>
+    <div id="body1">
+        <h2>Color of Body</h2>
+    </div>
+    <div id="searchButton1">
+        <h2>Color of Search Button</h2>
+    </div>
+    <div id="popupButtonMessage1">
+        <h2>Color of popupButtonMessage</h2>
+    </div>
+    
+     <div id="footer1">
+        <h2>Color of footer</h2>
+    </div>
 	<script src="js/auth.js"></script>
 </body>
 </html>
