--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</div>
 	</div>
 	<div id="slash">
-    <h1>Color examples Below</h1>
+    <h1>Color examples for Dashboard</h1>
     </div>
     <br>
     <div id="header1">
